force-app/main/default/objects/smagicinteract__Converse_Desk_Layout_Settings__mdt/smagicinteract__Converse_Desk_Layout_Settings__mdt.object-meta.xml
<CustomObject>
    <description>This setting stores the Converse Desk Layouts assigned to various users and profiles.</description>
    <label>Converse Desk Layout Settings</label>
    <pluralLabel>Converse Desk Layout Settings</pluralLabel>
</CustomObject>