force-app/main/default/objects/smagicinteract__Converse_Desk_Layout_Settings__mdt/fields/smagicinteract__All__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__All__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the All filter on Conversations will be visible on Converse Desk.</description>
    <label>All</label>
    <type>Checkbox</type>
</CustomField>