force-app/main/default/objects/smagicinteract__Converse_Desk_Layout_Settings__mdt/fields/smagicinteract__Closed_Conversations__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Closed_Conversations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Closed Conversations filter on Conversations will be visible on Converse Desk</description>
    <label>Closed Conversations</label>
    <type>Checkbox</type>
</CustomField>