force-app/main/default/objects/smagicinteract__Converse_Desk_Layout_Settings__mdt/fields/smagicinteract__Converse_Apps__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Converse_Apps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Converse Apps filter on Conversations will be visible on Converse Desk.</description>
    <label>Converse Apps</label>
    <type>Checkbox</type>
</CustomField>