force-app/main/default/objects/smagicinteract__Converse_Desk_Layout_Settings__mdt/fields/smagicinteract__Custom_Filter__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Custom_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Custom Lists filter on Conversations will be visible on Converse Desk.</description>
    <label>Custom Filter</label>
    <type>Checkbox</type>
</CustomField>