force-app/main/default/objects/smagicinteract__Converse_Desk_Layout_Settings__mdt/fields/smagicinteract__Follow_Ups__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Follow_Ups__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the No Response filter on Conversations will be visible on Converse Desk.</description>
    <label>Follow Ups</label>
    <type>Checkbox</type>
</CustomField>