force-app/main/default/objects/smagicinteract__Converse_Desk_Layout_Settings__mdt/fields/smagicinteract__Object_Filters__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Object_Filters__c</fullName>
    <description>This field contains a comma separated list of MOC IDs and these MOC filters will be displayed on Converse Desk.</description>
    <label>Object Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>