force-app/main/default/objects/smagicinteract__Converse_Desk_Layout_Settings__mdt/fields/smagicinteract__Open_Conversations__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Open_Conversations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Open Conversations filter on Conversations will be visible on Converse Desk.</description>
    <label>Open Conversations</label>
    <type>Checkbox</type>
</CustomField>