force-app/main/default/objects/smagicinteract__Converse_Desk_Layout_Settings__mdt/fields/smagicinteract__Unread__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Unread__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the Unread filter on Conversations will be visible on Converse Desk.</description>
    <label>Unread</label>
    <type>Checkbox</type>
</CustomField>